# anupars

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.sh  todo.md
config/: inputrc
src/: _initializer.txt  app.rs  context.rs  main.rs
src/core/: anu.rs  app.rs  application.rs  canvas.rs  canvas_base.rs  canvas_editor.rs  command.rs  command_handler.rs  commands.rs  config.rs  consts.rs  controller.rs  disspress.rs  grid.rs  list_view.rs  menu.rs  menubar.rs  midi.rs  mod.rs  playback_modes.rs  position.rs  rect.rs  regex.rs  scale.rs  stack.rs  traits.rs  ui.rs  utils.rs
src/core/clock/: audio_stream.rs  clock.rs  dsp.rs  metronome.rs  mod.rs  new_metronome.rs
src/core/parser/: midi_parser.rs  mod.rs
src/core/parser/midi/: parser.rs
src/core/parser/osc/: token.rs
src/core/timing/: clock.rs  metronome.rs
src/pkg/: canvas.rs  grid.rs  mod.rs  model.rs  view.rs
src/view/: canvas_base.rs  canvas_editor.rs  canvas_section.rs  menubar.rs  middle_section.rs  mod.rs  top_section.rs
src/view/common/: canvas_base.rs  canvas_editor.rs  canvas_section.rs  grid.rs  grid_editor.rs  marker.rs  marker_area.rs  menubar.rs  mod.rs  playhead.rs  playhead_controller.rs  timing_diagnostic.rs
src/view/desktop/: anu.rs  app.rs  console.rs  display.rs  middle_section.rs  mod.rs  top_section.rs
src/view/microcontroller/: anu.rs  app.rs  console.rs  mod.rs
