[package]
name = "anu-rs"
version = "0.1.0"
edition = "2021"
description = "anu sequencer"
authors = ["karnpapon <karnpapon@gmail.com>"]
license = "MIT"
repository = "https://github.com/karnpapon/anu-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "*"
rand = "0.8"
lazy_static = "1.5.0"
