[package]
name = "anu-rs"
version = "0.1.0"
edition = "2021"
description = "anu, a tiny backend-agnostic step-sequencer/live-coding environment that harnesses the power of RegEx."
authors = ["karnpapon <karnpapon@gmail.com>"]
license = "MIT"
repository = "https://github.com/karnpapon/anu-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "*"
lazy_static = "1.5.0"
dirs = "5.0.1"
cfonts = "1.2.0"
unicode-width = "0.1.13"
rand = "0.8"
num = "0.4.3"
crossbeam-utils = "0.8"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "z"   # Optimize for binary size
strip = true      # Remove debug symbols
