[package]
name = "anu-rs"
version = "0.1.0"
edition = "2021"
description = "anu, a tiny backend-agnostic step-sequencer/live-coding environment that harnesses the power of RegEx."
authors = ["karnpapon <karnpapon@gmail.com>"]
license = "MIT"
repository = "https://github.com/karnpapon/anu-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "*"
cursive-tabs = "^0"
lazy_static = "1.5.0"
dirs = "5.0.1"
cfonts = "1.2.0"
log = "0.4.22"
num = "0.4.3"
crossbeam = "0.8.4"
midir = "0.9.1"
regex = "1.10.6"
serde = "1.0.210"
nom = "7.1.3"
nom_locate = "4.0.0"
rosc = "0.8.1"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "z"   # Optimize for binary size
strip = true      # Remove debug symbols

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update && apt-get --assume-yes install libasound2-dev:$CROSS_DEB_ARCH",
]
